--- a/requirements.txt
+++ b/requirements.txt
@@ -1,207 +1,1 @@
-ackermann-msgs==2.0.2
-action-msgs==1.2.1
-action-tutorials-interfaces==0.20.5
-action-tutorials-py==0.20.5
-actionlib-msgs==4.9.0
-actuator-msgs==0.0.1
-ament-cmake-test==1.3.11
-ament-copyright==0.12.12
-ament-cppcheck==0.12.12
-ament-cpplint==0.12.12
-ament-flake8==0.12.12
-ament-index-python==1.4.0
-ament-lint==0.12.12
-ament-lint-cmake==0.12.12
-ament-package==0.14.1
-ament-pep257==0.12.12
-ament-uncrustify==0.12.12
-ament-xmllint==0.12.12
-angles==1.15.0
-annotated-types==0.7.0
-anyio==4.9.0
-builtin-interfaces==1.2.1
-cartographer-ros-msgs==2.0.9002
-certifi==2025.7.14
-click==8.2.1
-composition-interfaces==1.2.1
-control-msgs==4.8.0
-controller-manager==2.51.0
-controller-manager-msgs==2.51.0
-cv-bridge==3.2.1
-demo-nodes-py==0.20.5
-diagnostic-msgs==4.9.0
-dnspython==2.7.0
-domain-coordinator==0.10.0
-email_validator==2.2.0
-empy==3.3.2
-example-interfaces==0.9.3
-examples-rclpy-executors==0.15.3
-examples-rclpy-minimal-action-client==0.15.3
-examples-rclpy-minimal-action-server==0.15.3
-examples-rclpy-minimal-client==0.15.3
-examples-rclpy-minimal-publisher==0.15.3
-examples-rclpy-minimal-service==0.15.3
-examples-rclpy-minimal-subscriber==0.15.3
-exceptiongroup==1.3.0
-fastapi==0.116.1
-fastapi-cli==0.0.8
-fastapi-cloud-cli==0.1.4
-gazebo-model-attachment-plugin==1.0.3
-gazebo-model-attachment-plugin-msgs==1.0.3
-gazebo-msgs==3.9.0
-gazebo-video-monitor-interfaces==0.8.1
-gazebo-video-monitor-utils==0.8.1
-generate-parameter-library-py==0.5.0
-geometry-msgs==4.9.0
-gps-msgs==2.1.0
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-image-geometry==3.2.1
-interactive-markers==2.3.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joint-state-publisher==2.4.0
-joint-state-publisher-gui==2.4.0
-laser-geometry==2.4.0
-launch==1.0.9
-launch-param-builder==0.1.1
-launch-ros==0.19.9
-launch-testing==1.0.9
-launch-testing-ros==0.19.9
-launch-xml==1.0.9
-launch-yaml==1.0.9
-lifecycle-msgs==1.2.1
-logging-demo==0.20.5
-map-msgs==2.1.0
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-message-filters==4.3.7
-moveit-configs-utils==2.5.9
-moveit-msgs==2.2.1
-nav-msgs==4.9.0
-object-recognition-msgs==2.0.0
-octomap-msgs==2.0.1
-orjson==3.11.0
-osrf-pycommon==2.1.6
-pcl-msgs==1.0.0
-pendulum-msgs==0.20.5
-pydantic==2.11.7
-pydantic-extra-types==2.10.5
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-Pygments==2.19.2
-python-dotenv==1.1.1
-python-multipart==0.0.20
-python-qt-binding==1.1.2
-PyYAML==6.0.2
-qt-dotgraph==2.2.4
-qt-gui==2.2.4
-qt-gui-cpp==2.2.4
-qt-gui-py-common==2.2.4
-quality-of-service-demo-py==0.20.5
-rcl-interfaces==1.2.1
-rclpy==3.3.16
-rcutils==5.1.6
-resource-retriever==3.1.3
-rich==14.0.0
-rich-toolkit==0.14.8
-rignore==0.6.2
-rmw-dds-common==1.6.0
-ros-gz-interfaces==0.244.20
-ros2action==0.18.12
-ros2bag==0.15.14
-ros2cli==0.18.12
-ros2component==0.18.12
-ros2controlcli==2.51.0
-ros2doctor==0.18.12
-ros2interface==0.18.12
-ros2launch==0.19.9
-ros2lifecycle==0.18.12
-ros2multicast==0.18.12
-ros2node==0.18.12
-ros2param==0.18.12
-ros2pkg==0.18.12
-ros2run==0.18.12
-ros2service==0.18.12
-ros2topic==0.18.12
-rosbag2-interfaces==0.15.14
-rosbag2-py==0.15.14
-rosgraph-msgs==1.2.1
-rosidl-adapter==3.1.6
-rosidl-cli==3.1.6
-rosidl-cmake==3.1.6
-rosidl-generator-c==3.1.6
-rosidl-generator-cpp==3.1.6
-rosidl-generator-py==0.14.4
-rosidl-parser==3.1.6
-rosidl-runtime-py==0.9.3
-rosidl-typesupport-c==2.0.2
-rosidl-typesupport-cpp==2.0.2
-rosidl-typesupport-fastrtps-c==2.2.2
-rosidl-typesupport-fastrtps-cpp==2.2.2
-rosidl-typesupport-introspection-c==3.1.6
-rosidl-typesupport-introspection-cpp==3.1.6
-rpyutils==0.2.1
-rqt-action==2.0.1
-rqt-bag==1.1.5
-rqt-bag-plugins==1.1.5
-rqt-console==2.0.3
-rqt-graph==1.3.1
-rqt-gui==1.1.7
-rqt-gui-py==1.1.7
-rqt-msg==1.2.0
-rqt-plot==1.1.5
-rqt-publisher==1.5.0
-rqt-py-common==1.1.7
-rqt-py-console==1.0.2
-rqt-reconfigure==1.1.2
-rqt-service-caller==1.0.5
-rqt-shell==1.0.2
-rqt-srv==1.0.3
-rqt-topic==1.5.0
-scripts==3.9.0
-sensor-msgs==4.9.0
-sensor-msgs-py==4.9.0
-sentry-sdk==2.33.0
-shape-msgs==4.9.0
-shellingham==1.5.4
-sniffio==1.3.1
-srdfdom==2.0.7
-sros2==0.10.6
-starlette==0.47.1
-statistics-msgs==1.2.1
-std-msgs==4.9.0
-std-srvs==4.9.0
-stereo-msgs==4.9.0
-teleop-twist-keyboard==2.4.0
-tf-transformations==1.1.0
-tf2-geometry-msgs==0.25.13
-tf2-kdl==0.25.13
-tf2-msgs==0.25.13
-tf2-py==0.25.13
-tf2-ros-py==0.25.13
-tf2-sensor-msgs==0.25.13
-tf2-tools==0.25.13
-theora-image-transport==2.5.3
-topic-monitor==0.20.5
-trajectory-msgs==4.9.0
-transforms3d==0.4.2
-turtlesim==1.4.2
-typer==0.16.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-ujson==5.10.0
-unique-identifier-msgs==2.2.1
-urdfdom-py==1.2.1
-urllib3==2.5.0
-uvicorn==0.35.0
-uvloop==0.21.0
-vision-msgs==4.1.1
-visualization-msgs==4.9.0
-watchfiles==1.1.0
-websockets==15.0.1
-xacro==2.0.13
+Successfully installed MarkupSafe-3.0.2 annotated-types-0.7.0 anyio-4.9.0 certifi-2025.7.14 click-8.2.1 dnspython-2.7.0 email-validator-2.2.0 exceptiongroup-1.3.0 fastapi-0.116.1 fastapi-cli-0.0.8 fastapi-cloud-cli-0.1.4 h11-0.16.0 httpcore-1.0.9 httptools-0.6.4 httpx-0.28.1 idna-3.10 itsdangerous-2.2.0 jinja2-3.1.6 markdown-it-py-3.0.0 mdurl-0.1.2 orjson-3.11.0 pydantic-2.11.7 pydantic-core-2.33.2 pydantic-extra-types-2.10.5 pydantic-settings-2.10.1 pygments-2.19.2 python-dotenv-1.1.1 python-multipart-0.0.20 pyyaml-6.0.2 rich-14.0.0 rich-toolkit-0.14.8 rignore-0.6.2 sentry-sdk-2.33.0 shellingham-1.5.4 sniffio-1.3.1 starlette-0.47.1 typer-0.16.0 typing-extensions-4.14.1 typing-inspection-0.4.1 ujson-5.10.0 urllib3-2.5.0 uvicorn-0.35.0 uvloop-0.21.0 watchfiles-1.1.0 websockets-15.0.1
